ARROW-6806: [C++] [Python] Fix crash validating an IPC-originating empty array

Buffers read from IPC should always be non-null, even when empty
(with a well-known exception for the null bitmap when null_count == 0).

Closes #5595 from pitrou/ARROW-6806-empty-list-ipc-read-crash and squashes the following commits:

d416bdffe <Antoine Pitrou> ARROW-6806:   Fix crash validating an IPC-originating empty array

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>